--- a/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/Base.lproj/Main.storyboard
@@ -10,55 +10,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Weather-->
-        <scene sceneID="Gx1-Y0-zKz">
-            <objects>
-                <tableViewController id="1Bd-qu-7A5" customClass="WeatherTableViewController" customModule="WeatherApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="5G8-b4-Isd">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="WheatherCell" textLabel="lgm-31-tGp" detailTextLabel="xfU-xd-gi5" imageView="ur0-Ix-6mP" style="IBUITableViewCellStyleSubtitle" id="LQi-B6-JFM">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LQi-B6-JFM" id="ijG-fz-olH">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="lgm-31-tGp">
-                                            <rect key="frame" x="75" y="5" width="33.5" height="20.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xfU-xd-gi5">
-                                            <rect key="frame" x="75" y="25.5" width="44" height="14.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" image="imagePlaceholder-2" id="ur0-Ix-6mP">
-                                            <rect key="frame" x="16" y="0.0" width="44" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </imageView>
-                                    </subviews>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="1Bd-qu-7A5" id="4qH-9L-Ilt"/>
-                            <outlet property="delegate" destination="1Bd-qu-7A5" id="Flv-wH-HGn"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Weather" id="ZfC-gH-3EZ"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ATJ-Pp-pGz" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1244" y="105"/>
-        </scene>
         <!--Address-->
         <scene sceneID="6F5-eR-vl9">
             <objects>
@@ -101,6 +52,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="T18-ht-9rl" kind="showDetail" identifier="TempDetail" id="2XJ-9Z-tzm"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -130,82 +84,55 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qwz-dj-v5q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3545" y="104"/>
+            <point key="canvasLocation" x="-3585" y="154"/>
         </scene>
-        <!--Select City State-->
-        <scene sceneID="ICy-2t-ef5">
+        <!--Weather Table View Controller-->
+        <scene sceneID="qgV-be-krN">
             <objects>
-                <viewController id="PbB-8o-WSs" customClass="SelectCityState" customModule="WeatherApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="OPD-IU-9oK">
+                <tableViewController id="T18-ht-9rl" customClass="WeatherTableViewController" customModule="WeatherApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Qrb-hC-lqT">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RvJ-Vd-m5K">
-                                <rect key="frame" x="0.0" y="287" width="375" height="66"/>
-                                <connections>
-                                    <outlet property="dataSource" destination="PbB-8o-WSs" id="pje-dM-sNG"/>
-                                    <outlet property="delegate" destination="PbB-8o-WSs" id="oxO-T2-pme"/>
-                                </connections>
-                            </pickerView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IWQ-7k-SeM">
-                                <rect key="frame" x="72" y="175" width="257" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M9o-MR-BWL">
-                                <rect key="frame" x="114" y="459" width="146" height="30"/>
-                                <state key="normal" title="Temperature"/>
-                                <connections>
-                                    <action selector="Temperature:" destination="PbB-8o-WSs" eventType="touchDown" id="nxe-nN-5to"/>
-                                </connections>
-                            </button>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="vds-mZ-vbV" firstAttribute="trailing" secondItem="IWQ-7k-SeM" secondAttribute="trailing" constant="46" id="2Uf-1B-0Ze"/>
-                            <constraint firstItem="M9o-MR-BWL" firstAttribute="top" secondItem="RvJ-Vd-m5K" secondAttribute="bottom" constant="106" id="7pn-qd-qjr"/>
-                            <constraint firstItem="vds-mZ-vbV" firstAttribute="bottom" secondItem="M9o-MR-BWL" secondAttribute="bottom" constant="178" id="9jf-ty-Bcb"/>
-                            <constraint firstItem="IWQ-7k-SeM" firstAttribute="top" secondItem="vds-mZ-vbV" secondAttribute="top" constant="59" id="DfV-0d-jge"/>
-                            <constraint firstItem="RvJ-Vd-m5K" firstAttribute="top" secondItem="IWQ-7k-SeM" secondAttribute="bottom" constant="91" id="Nkf-1t-9nc"/>
-                            <constraint firstItem="M9o-MR-BWL" firstAttribute="leading" secondItem="vds-mZ-vbV" secondAttribute="leading" constant="114" id="Py3-MJ-cgW"/>
-                            <constraint firstItem="vds-mZ-vbV" firstAttribute="bottom" secondItem="RvJ-Vd-m5K" secondAttribute="bottom" constant="314" id="Rdt-Qj-e6o"/>
-                            <constraint firstItem="IWQ-7k-SeM" firstAttribute="leading" secondItem="vds-mZ-vbV" secondAttribute="leading" constant="72" id="Rtq-BH-UcG"/>
-                            <constraint firstItem="RvJ-Vd-m5K" firstAttribute="trailing" secondItem="vds-mZ-vbV" secondAttribute="trailing" id="TOy-mh-yLz"/>
-                            <constraint firstItem="RvJ-Vd-m5K" firstAttribute="top" secondItem="vds-mZ-vbV" secondAttribute="top" constant="171" id="fkc-Z1-T1m"/>
-                            <constraint firstItem="RvJ-Vd-m5K" firstAttribute="leading" secondItem="vds-mZ-vbV" secondAttribute="leading" id="gui-ut-VOH"/>
-                            <constraint firstItem="vds-mZ-vbV" firstAttribute="trailing" secondItem="M9o-MR-BWL" secondAttribute="trailing" constant="115" id="hKe-oR-Gmu"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="vds-mZ-vbV"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="YtW-QT-59X"/>
-                    <connections>
-                        <outlet property="SelectedCity" destination="IWQ-7k-SeM" id="xwx-HJ-Uf8"/>
-                        <outlet property="citySelectPicker" destination="RvJ-Vd-m5K" id="4eM-DF-xgU"/>
-                        <segue destination="1Bd-qu-7A5" kind="showDetail" identifier="Weather" id="Jkd-Fq-Gl9"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="M4l-E2-Ohe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TempCel" textLabel="gIp-Cx-SOv" detailTextLabel="Mqw-0f-K6o" imageView="9gC-Sf-SWq" style="IBUITableViewCellStyleSubtitle" id="Z1l-yo-Jyw">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Z1l-yo-Jyw" id="1p8-dK-7mK">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="gIp-Cx-SOv">
+                                            <rect key="frame" x="75" y="5" width="33.5" height="20.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Mqw-0f-K6o">
+                                            <rect key="frame" x="75" y="25.5" width="44" height="14.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" image="imagePlaceholder-2" id="9gC-Sf-SWq">
+                                            <rect key="frame" x="16" y="0.0" width="44" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </imageView>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="T18-ht-9rl" id="ANI-cN-rW0"/>
+                            <outlet property="delegate" destination="T18-ht-9rl" id="1iv-ID-cbi"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5tD-yd-G1a" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="445.60000000000002" y="104.7976011994003"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="DgV-sg-wrI">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" hidesBarsOnSwipe="YES" id="V1O-nj-Uu5" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="5mA-mk-Ky6">
-                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="PbB-8o-WSs" kind="relationship" relationship="rootViewController" id="9Kz-qg-ve7"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ybI-ue-ymf" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-308" y="105"/>
+            <point key="canvasLocation" x="-2814" y="153"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="NVi-Z3-nAz">
@@ -224,7 +151,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3wM-tw-nDh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2796.8000000000002" y="104.34782608695653"/>
+            <point key="canvasLocation" x="-4394" y="152"/>
         </scene>
     </scenes>
     <resources>
